# nine-snake

./: CHANGELOG.md  diagnose.ps1  package-lock.json  package.json
.github/workflows/: release-minimal.yml  release.yml  test.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error_ui.rs  lib.rs  main.rs
src-tauri/src/api/: rest.rs
src-tauri/src/channel/: bridge.rs  discord.rs  router.rs  telegram.rs  types.rs  webchat.rs
src-tauri/src/commands/: acl.rs  channel.rs  chat.rs  core.rs  device.rs  editor.rs  export.rs  identity.rs  llm.rs  memory.rs  mod.rs  os.rs  reflect.rs  security.rs  skill.rs  swarm.rs  sync.rs  tool.rs  webchat.rs  work.rs  writing.rs
src-tauri/src/editor/: debounce.rs  file_ops.rs  git.rs  mod.rs
src-tauri/src/evolution/: goal_signal.rs  outcome.rs  outcome_collectors.rs  prompt_mutator.rs  skill_evolver.rs
src-tauri/src/grpc/: proto.rs  server.rs
src-tauri/src/identity/: did_key.rs  document.rs  mod.rs
src-tauri/src/llm/: anthropic.rs  gateway.rs  mod.rs  ollama.rs
src-tauri/src/mcp/: client.rs  config.rs  mod.rs  security.rs  transport.rs
src-tauri/src/memory/: acl.rs  blackhole.rs  embedder.rs  entity_extractor.rs  export.rs  forgetting.rs  graph_search.rs  importance.rs  lance_store.rs  layers.rs  migration.rs  mod.rs  reflect.rs  sponge.rs  sqlite_store.rs  types.rs
src-tauri/src/os/: shell.rs
src-tauri/src/perf/: monitor.rs
src-tauri/src/security/: detectors.rs  injection_guard.rs  keychain.rs  ssrf_guard.rs
src-tauri/src/skills/: audit.rs  engine.rs  extractor.rs  hub_client.rs  importer.rs  marketplace.rs  mod.rs  sandbox.rs  seeder.rs  store.rs  types.rs
src-tauri/src/swarm/: bus.rs  composer.rs  context.rs  mod.rs  negotiator.rs  orchestrator.rs
src-tauri/src/swarm/agents/: mod.rs
src-tauri/src/sync/: crdt.rs  device_manager.rs  e2ee.rs  key_vault.rs  mod.rs  pairing.rs  transport.rs
src-tauri/src/tools/: mod.rs  shell_tool.rs
src-tauri/src/work/: mod.rs
src-tauri/src/writing/: mod.rs  templates.rs
src-tauri/tests/e2e/: security.rs
src-tauri/tests/integration/: bootstrap_test.rs  common.rs  compression_lock_test.rs  documents_fk_test.rs  editor_test.rs  grpc_wire_test.rs  icon_assets_test.rs  key_rotation_test.rs  llm_test.rs  memory_flow_test.rs  reflect_test.rs  shell_test.rs  skills_test.rs  swarm_e2e_test.rs  swarm_test.rs  sync_test.rs  updater_pubkey_test.rs  v2_test.rs  work_test.rs  writing_test.rs
