[package]
name = "nine-snake"
version = "1.1.7"
description = "A local-first AI assistant that grows with you"
authors = ["nine-snake team"]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/AQWlala/nine-snake"
homepage = "https://nine-snake.app"

[lib]
name = "nine_snake_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
# v0.3: tonic-build generates Rust types + service traits from
# `proto/nine_snake.proto`. Pinned to 0.12 to match the runtime dep.
# Marked optional so the minimal build (`--no-default-features`)
# doesn't compile it (and its heavy transitive dep graph). The
# `[features].grpc` list below uses `dep:tonic-build` to enable it
# when the feature is on.
tonic-build = { version = "0.12", features = [], optional = true }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
# v0.5: OS integration plugins.
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-global-shortcut = "2.0"
# v1.0: auto-update plugin (offline-friendly; configures a JSON
# manifest endpoint and signature verification key).
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "io-util", "sync", "process", "fs", "signal"] }
rusqlite = { version = "0.31", features = ["bundled"] }
# v0.1-v1.0: LanceDB dense vector store. Heavy (pulls Apache Arrow in).
# The `vector-store` feature (on by default) enables the real LanceDB
# backend. For a stripped "minimal" build (--no-default-features),
# lance_store.rs falls back to its built-in in-memory mirror and
# `lancedb`/`arrow-*` are not pulled in.
lancedb = { version = "0.4", optional = true }
arrow-array = { version = "51.0", optional = true }
arrow-schema = { version = "51.0", optional = true }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# v1.0: log rotation + JSON file appender for persistent logs.
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
parking_lot = "0.12"
# v1.0.1 P0#5: cancellation tokens for the reflection worker.
tokio-util = "0.7"
# v1.0.1 P0#12: OS keychain (macOS Keychain / Windows Credential
# Vault / Linux Secret Service) for the API-key store.  The
# backend is selected per-OS via target-specific dependencies
# (see the `[target...]` blocks below).  We can't just enable all
# features globally because `sync-secret-service` links against
# libdbus, which is absent on Windows and causes
# `STATUS_ENTRYPOINT_NOT_FOUND` at load time for the test binary.
keyring = { version = "3" }
dashmap = "5.5"
once_cell = "1.19"
# v1.1 P1-4: regex for sensitive data detection patterns
regex = "1.10"
url = "2.5"
lru = "0.12"
futures = "0.3"
async-stream = "0.3"
# v0.3: gRPC stack. Gated behind the `grpc` feature (on by default).
# The minimal build (`--no-default-features`) skips all of these.
tonic = { version = "0.12", features = ["transport", "server", "prost"], optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
tower = { version = "0.5", optional = true }
hyper = { version = "1.0", features = ["server"], optional = true }
# v1.1 P0-4: hyper-util provides TokioIo for HTTP/2 connection serving.
# NOTE: hyper-util is on 0.1.x (not 0.12 — that was a typo confusing
# it with the tonic version). Features: "tokio" enables the Tokio
# runtime adapter, "http2" enables HTTP/2 support for the gRPC server.
hyper-util = { version = "0.1", features = ["tokio", "http2"], optional = true }
# v0.3: server-streaming RPC support.
futures-util = { version = "0.3", optional = true }
futures-core = { version = "0.3", optional = true }
# v0.5: editor + file watching.
notify = "6.1"
walkdir = "2.4"
# v0.5: shell command execution (synchronous, with timeout).
shell-words = "1.1"
# v0.5: E2EE — AES-256-GCM AEAD, X25519 ECDH, HKDF-SHA256 key derivation.
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
bs58 = "0.5"
# wasmtime is very heavy; only enable when network is available to download deps.
# Uncomment the line below and run `cargo check --features wasm-sandbox` to verify.
# wasmtime = { version = "24", default-features = false, features = ["cranelift"], optional = true }
# v0.5: cross-platform clipboard.
arboard = "3.3"
# v1.0: process / memory telemetry for the perf module.  Pulled
# in only on desktop targets to keep mobile builds slim.
# v1.0.1: sysinfo 0.30 doesn't expose a `system` feature anymore —
# the previous call site relied on `System` which is in the default
# feature set.  Keep `default-features = false` to slim the binary
# (drops `apple-app-store` / `unknown-ci` / etc.) and explicitly
# enable the system-information bits we actually need.
sysinfo = { version = "0.30", default-features = false, features = ["serde", "multithread"] }
# v1.0 (P0#5): secure temporary file handles for the skill
# executor's sandboxed Python subprocess.  Using
# `NamedTempFile` (not the predictable `std::env::temp_dir()`
# path) means an attacker can't pre-create a symlink at the
# well-known location to hijack the process.
tempfile = "3.0"
serde_yaml = "0.9"
getrandom = "0.2"


# v1.1-fix: bytes + http-body + http-body-util are required by
# `grpc/server.rs` (BoxBody / Frame / Poll plumbing for the HTTP/2 + tonic
# 0.12 wire shim). Declared as optional deps behind the `grpc` feature.
bytes = { version = "1.6", optional = true }
http-body = { version = "1.0", optional = true }
http-body-util = { version = "0.1", optional = true }

# Target-specific keychain backends.  Each platform enables only
# the backend it can actually link against.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "vendored"] }

[dev-dependencies]
# v1.0: criterion-based micro-benchmarks for hot paths.
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "memory"
harness = false

[features]
# v0.3: gRPC + vector-store are on by default. Build with
# `--no-default-features` to strip both: the gRPC server, the tonic
# transport, and the LanceDB dense-vector backend. The LanceDB
# feature has its own in-memory fallback so the rest of the system
# keeps working (vector search becomes a linear in-RAM cosine scan).
default = ["vector-store"]
grpc = [
  "dep:tonic",
  "dep:tonic-build",
  "dep:prost",
  "dep:prost-types",
  "dep:tower",
  "dep:hyper",
  "dep:hyper-util",
  "dep:futures-util",
  "dep:futures-core",
  "dep:bytes",
  "dep:http-body",
  "dep:http-body-util",
]
vector-store = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]
custom-protocol = ["tauri/custom-protocol"]
# v1.0: enable the perf monitor (process telemetry) on top of the
# lightweight in-process counters.  Off by default for tests.
perf-telemetry = []

# v1.3: closed-loop self-evolution module.  Off by default.  Open
# with `--features self-evolution`.  The module compiles inert and
# never mutates runtime behaviour when disabled — every mutator /
# evolver reads `evolution_enabled()` first.
self-evolution = []
# wasm-sandbox feature is experimental — requires the wasmtime crate.
# Enable when network is available to download deps:
# 1. Uncomment the wasmtime dep above
# 2. Run: cargo check --features wasm-sandbox
wasm-sandbox = [] # experimental: not production-ready
# v1.3: MCP protocol client. Off by default.
mcp = []
# v1.3: native channel adapters (Telegram/Discord). Off by default.
channels = []
# v1.3: DID identity module. Off by default.
did-identity = []
# v1.3: CRDT sync conflict resolution. Off by default.
crdt-sync = []

[profile.release]
# v1.0: minimum-size release build.
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# v1.0: opt-level=1 keeps test builds snappy while still
# de-virtualising small helpers.
opt-level = 1
